--- a/wastec-prototype.html
+++ b/wastec-prototype.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PT. Wastec International - Jasa Pengolahan Limbah B3</title>
+    <title>PT. Sarana Pamunah Limbah Indonesia - Jasa Pengolahan Limbah B3</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <img src="https://via.placeholder.com/180x60/2ecc71/ffffff?text=WASTEC+LOGO" alt="Wastec Logo">
+                    <img src="images/logo-anda.png" alt="Logo SPLI">
                 </div>
                 
                 <nav class="nav-menu">
