--- a/wastec-prototype.html
+++ b/wastec-prototype.html
@@ -53,7 +53,7 @@
     <section class="hero-slider">
         <div class="slider-container">
             <div class="slide active">
-                <div class="slide-bg" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://via.placeholder.com/1920x800/1a5490/ffffff?text=Slide+1')"></div>
+                <div class="slide active" style="background-image: url('https://raw.githubusercontent.com/spli-hub/website-v1.1/main/images/image1.png')"></div>
                 <div class="container">
                     <div class="slide-content">
                         <h1>Jasa Pengangkutan Limbah Bertanggung Jawab</h1>
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="slide">
-                <div class="slide-bg" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://via.placeholder.com/1920x800/27ae60/ffffff?text=Slide+2')"></div>
+               <div class="slide" style="background-image: url(''https://raw.githubusercontent.com/spli-hub/website-v1.1/main/image2.png')"></div>
                 <div class="container">
                     <div class="slide-content">
                         <h1>Kelola Limbah Secara Profesional<br>Bersama Kami Wastec</h1>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="slide">
-                <div class="slide-bg" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://via.placeholder.com/1920x800/16a085/ffffff?text=Slide+3')"></div>
+                <div class="slide" style="background-image: url(''https://raw.githubusercontent.com/spli-hub/website-v1.1/main/image3.jpg')"></div>
                 <div class="container">
                     <div class="slide-content">
                         <h1>Hubungi Kami untuk Informasi<br>Lebih Lanjut</h1>
