--- a/wastec-prototype.html
+++ b/wastec-prototype.html
@@ -21,19 +21,18 @@
                         <li class="dropdown">
                             <a href="#layanan">Layanan <i class="fas fa-chevron-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#pengelolaan-limbah-b3">Pengelolaan Limbah B3</a></li>
-                                <li><a href="#pengangkutan-limbah">Pengangkutan Limbah</a></li>
-                                <li><a href="#pengolahan-air">Pengolahan Air Limbah Industri</a></li>
-                                <li><a href="#limbah-minyak">Pengelolaan Limbah Minyak dan Gas</a></li>
-                                <li><a href="#pembersihan-minyak">Pembersihan dan Pemulihan Minyak</a></li>
-                                <li><a href="#rekayasa">Rekayasa Lingkungan</a></li>
-                                <li><a href="#pembersihan-tempat">Layanan Pembersihan Tempat</a></li>
+                                <li><a href="#pengangkutan-limbah-b3">Pengangkutan Limbah B3</a></li>
+                                <li><a href="#pengumpulan-limbah-b3">Mitra Strategis Pengumpulan Limbah B3 Berizin</a></li>
+                                <li><a href="#pengolahan-limbah-b3">Mitra Strategis Pengolahan Limbah B3</a></li>
+                                <li><a href="#pengemasan-ulang">Pengemasan Ulang Limbah B3</a></li>
+                                <li><a href="#pengolahan-sampah">Pengelolaan Sampah</a></li>
+                                <li><a href="pemusnahan-dokumen-dan-produk-kadaluarsa">Pemusnahan Dokumen dan Produk Kadaluarsa Bersertifikat</a></li>
                             </ul>
                         </li>
                         <li><a href="#tentang">Tentang Kami</a></li>
-                        <li><a href="#fasilitas">Fasilitas</a></li>
                         <li><a href="#teknologi">Teknologi</a></li>
-                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="#kontak-kami">Kontak Kami</a></li>
+                        <li><a href="#portal-klien">Portal Klien</a></li>
                     </ul>
                 </nav>
                 
