--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <img src="images/logo-anda.png" alt="Logo SPLI">
+                    <span class="brand-name">PT.Sarana Pamunah Limbah Indonesia</span>
                 </div>
                 
                 <nav class="nav-menu">
